--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ title: Latest Market Information
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, fig.width = 10)
 ```
 
-```{r run-script, eval = FALSE}
+```{r run-script, eval = TRUE}
 source("get-data-for-website.R")
 ```
 
