moving-average.R now eval=TRUE

--- a/trend.Rmd
+++ b/trend.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo=FALSE, message = FALSE, warning = FALSE, fig.width = 
 
 ```
 
-```{r, eval = FALSE}
+```{r, eval = TRUE}
 source("moving-averages.R")
 ```
 
